<resources>
    <string name="app_name">VCC Tracking</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ngô Đức Bắc</string>
    <string name="nav_header_subtitle">bacnd4@viettel.com.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Theo dõi lộ trình xe</string>
    <string name="menu_gallery">Lập phiếu đặt xe</string>
    <string name="menu_slideshow">Danh sách phiếu đã lập</string>
    <string name="menu_duyet_phieu_tpbp">Duyệt phiếu (Trưởng bộ phận)</string>
    <string name="menu_giao_viec_lai_xe">Nhận việc (Lái Xe)</string>
    <string name="menu_send">Báo cáo</string>
    <string name="dat_xe">Đặt xe</string>
    <string name="don_vi">Đơn vị</string>
    <string name="ho_ten_email">Họ tên - Email</string>
    <string name="thong_tin_nguoi_tao">Thông tin người tạo</string>
    <string name="thong_tin_dat_xe">Thông tin đặt xe</string>
    <string name="diem_di">Điểm đi</string>
    <string name="nhap_diem_di">Nhập điểm đi</string>
    <string name="diem_den">Điểm đến</string>
    <string name="nhap_diem_den">Nhập điểm đến</string>
    <string name="chon_loai_xe">Loại xe</string>
    <string name="nguoi_di_cung">Người đi cùng:</string>
    <string name="nguoi_phe_duyet">Người phê duyệt:</string>
    <string name="question_dat_xe_comfirm">Bạn chắc chắn muốn tạo phiếu đặt xe ?</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="cancel">Hủy</string>
    <string name="name_company">Tổng Công ty CP Công trình Viettel</string>
    <string name="hien_mat_khau">Hiện mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="please_input_info">Vui lòng nhập thông tin !</string>
    <string name="loi_ket_noi">Lỗi kết nối mạng !</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="question_dang_xuat_comfirm">Bạn có muốn đăng xuất không ?</string>
    <string name="search">Tìm kiếm</string>
    <string name="time_start">Thời gian khởi hành</string>
    <string name="please_pos_from">Vui lòng nhập điểm đi !</string>
    <string name="please_pos_to">Vui lòng nhập điểm đến !</string>
    <string name="please_input_type_car">Vui lòng chọn loại xe</string>
    <string name="choose_type_car_sp">--- Chọn loại xe ---</string>
    <string name="please_time_start">Vui lòng chọn thời gian khởi hành !</string>
    <string name="please_choose_type_car">Vui lòng chọn loại xe !</string>
    <string name="please_choose_people_together">Vui lòng chọn người đi cùng !</string>
    <string name="please_choose_people_approve">Vui lòng chọn người phê duyệt !</string>
    <string name="success_add_book_car">Tạo phiếu đặt xe thành công !</string>
    <string name="pos_from">Từ:</string>
    <string name="pos_to">Đến:</string>
    <string name="time">Thời gian:</string>
    <string name="state">Trạng thái:</string>
    <string name="no_data">Không có dữ liệu !</string>
    <string name="dang_cho_duyet">Đang chờ duyệt</string>
    <string name="da_duoc_duyet">Đã được duyệt</string>
    <string name="tu_choi">Từ chối</string>
    <string name="yeu_cau_sua">Yêu cầu sửa</string>
    <string name="menu_xep_xe_qldx">Xếp xe (Quản lý đội xe)</string>
    <string name="detail_book_car">Thông tin đặt xe</string>
    <string name="duyet_phieu">Duyệt phiếu</string>
    <string name="approve">Phê duyệt</string>
    <string name="approve_comfirm">Bạn chắc chắn phê duyệt ?</string>
    <string name="reason_reject">Vui lòng nhập lý do từ chối ?</string>
    <string name="ly_do">Lý do</string>
    <string name="ly_do_please">Chưa nhập lí do</string>
    <string name="yeu_cau_sua_ly_do">Lý do yêu cầu sửa ?</string>
    <string name="dang_cho_xep">Đang chờ xếp</string>
    <string name="da_duoc_xep">Đã được xếp</string>
    <string name="xep_xe">Xếp xe</string>
    <string name="license_car">Biển số:</string>
    <string name="driver_name">Người lái:</string>
    <string name="chon_xe">Chọn xe:</string>
    <string name="warning_choose_car">Không thể chọn xe đang trong trạng thái chưa sẵn sàng !</string>
    <string name="please_choose_car_driver">Vui lòng chọn xe !</string>
    <string name="menu_view_and_approval">Duyệt xe (Thủ trưởng đơn vị xe)</string>
    <string name="reason">Lý do:</string>
    <string name="chon_kieu_di">Chọn kiểu đi</string>
    <string name="mot_chieu">Một chiều</string>
    <string name="hai_chieu">Hai chiều</string>
    <string name="khan_cap">Khẩn cấp</string>
    <string name="khac">Khác</string>
    <string name="update">Cập nhật</string>
    <string name="update_book_car">Cập nhật phiếu đặt xe</string>
    <string name="question_update_comfirm">Bạn chắc chắn cập nhật ?</string>
    <string name="phone">Số điện thoại</string>
    <string name="dong_lenh">Đóng lệnh</string>
    <string name="info_lo_trinh_xe">Thông tin lộ trình xe</string>
    <string name="tong_quang_duong_du_kien">Tổng quãng đường dự kiến:</string>
    <string name="cac_diem_tren_lo_trinh">Các điểm trên lộ trình:</string>
    <string name="thoi_gian_du_kien_tren_duong">Thời gian dự kiến trên đường:</string>
    <string name="thoi_gian_du_kien_den_noi">Thời gian dự kiến đến nơi:</string>
    <string name="nguoi_yeu_cau">Người yêu cầu:</string>
    <string name="nguoi_yeu_cau_2">Người yêu cầu</string>
    <string name="please_install_maps_application">Vui lòng cài đặt ứng dụng google maps !</string>
    <string name="detail_giao_viec">Thông tin lệnh lái xe</string>
    <string name="time_end">Thời gian kết thúc</string>
    <string name="people_create">Người tạo:</string>
    <string name="kieu_di">Kiểu đi</string>
    <string name="error_parse_address">Không tìm thấy địa chỉ này !</string>
    <string name="du_kien_lo_trinh">Lộ trình, khoảng cách, thời gian dự kiến ban đầu</string>
    <string name="hien_tai_lo_trinh">Lộ trình, khoảng cách, thời gian dự kiến hiện tại</string>
    <string name="please_time_end">Vui lòng chọn thời gian kết thúc !</string>
    <string name="chat_ban_phai_chon_lich_trong_tuong_lai">Bạn phải chọn lịch trong tương lai !</string>
    <string name="chon_lich_khoi_hanh">Chọn thời gian khởi hành</string>
    <string name="chon_lich_ket_thuc">Chọn thời gian kết thúc</string>
    <string name="phat_sinh">Phát sinh</string>
    <string name="dac_biet">Đặc biệt</string>
    <string name="xe_tai">Xe tải</string>
    <string name="menu_xep_xe_ban_tct">Xếp xe (Ban xe TCT)</string>
    <string name="menu_view_and_approval_tphc_tct">Duyệt xe (TP Hành chính TCT)</string>
    <string name="su_co">Sự cố</string>
    <string name="gap_loi_khi_khoi_tao_trung_tam_thong_bao">Gặp lỗi khi khởi tạo trung tâm thông báo. Vui lòng thử lại!</string>
    <string name="thu_lai">Thử lại</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="fcm_message">fcm_message</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <string name="tim_kiem_xe">Tìm kiếm xe</string>
    <string name="num_people_together_selected">(đã chọn %d người)</string>
    <string name="ban_phai_chon_thoi_gian_end_sau_start">Bạn phải chọn thời gian kết thúc sau thời gian khởi hành</string>
    <string name="thong_tin_xe">Thông tin xe %s</string>
    <string name="chon_khoang_thoi_gian_xe_chay">Chọn khoảng thời gian xe chạy:</string>
    <string name="vi_tri_cua_ban">Vị trí của bạn !</string>
    <string name="no_history_car">Xe này không có lịch sử hành trình !</string>
    <string name="tu">Từ :</string>
    <string name="den">Đến :</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="theo_doi_lo_trinh_tu">Xem lộ trình xe từ lúc:</string>
    <string name="theo_doi_lo_trinh_den">Xem lộ trình xe đến lúc:</string>
    <string name="please_chon_xe">Vui lòng chọn xe</string>
    <string name="please_chon_thoi_gian_tu">Vui lòng chọn thời gian bắt đầu lộ trình</string>
    <string name="please_chon_thoi_gian_den">Vui lòng chọn thời gian đến</string>
    <string name="diem_bat_dau">Điểm bắt đầu</string>
    <string name="chon_nguoi">Chọn người</string>
    <string name="nhan_vien_dong_lenh">Nhân viên đóng lệnh</string>
    <string name="lai_xe_dong_lenh">Lái xe đóng lệnh</string>
    <string name="chon_dia_chi">Chọn địa chỉ</string>
    <string name="tinh_thanh_pho">Tỉnh/Thành phố</string>
    <string name="auth_reject">Tài khoản mật khẩu không hợp lệ !</string>
    <string name="nguoi_lai">Người lái: %s</string>
    <string name="nguoi_tao">Người tạo: %s</string>
    <string name="thoi_gian_da_di">Thời gian đã đi: %s</string>
    <string name="thoi_gian_du_tinh_con">Thời gian dự tính còn: %s</string>
    <string name="reject_permission">Nếu bạn từ chối quyền, bạn không thể sử dụng dịch vụ này\n\nVui lòng bật quyền tại [Setting] > [Permission]</string>
    <string name="let_say_you">Hãy nói theo cách của bạn</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="xuat_phat">Xuất phát</string>
    <string name="dich_den">Đích đến</string>
    <string name="nguoi_tao_2">Người tạo</string>
    <string name="trang_thai">Trạng thái</string>
    <string name="ho_ten">Họ tên</string>
    <string name="email">Email</string>
    <string name="diem_khoi_hanh">Điểm khởi hành</string>
    <string name="chon_dia_diem">Chọn địa điểm</string>
    <string name="khoi_hanh_luc">Khởi hành lúc</string>
    <string name="den_luc">Đến lúc</string>
    <string name="loai_xe">Loại xe</string>
    <string name="nguoi_di_cung_2">Người đi cùng</string>
    <string name="nguoi_phe_duyet_2">Người phê duyệt</string>
    <string name="nguoi_lai_2">Nguời lái</string>
    <string name="di_luc">Đi lúc</string>
    <string name="con_lai">Còn lại</string>
    <string name="nhap_content_cv">Nhập nội dung công việc</string>
    <string name="content_cv">Nội dung công việc</string>
    <string name="content_cv_continue">Nội dung công việc tiếp theo</string>
    <string name="please_input_content">Vui lòng điền nội dung công việc !</string>
    <string name="lich_su_phieu_dat_xe_cua">Danh sách phiếu đặt của %s</string>
    <string name="no_book_history_car">Xe này không có lịch sử đặt phiếu</string>
    <string name="menu_lap_phieu_dat_xe">Lập phiếu đặt xe</string>
    <string name="menu_danh_sach_phieu_da_lap">Danh sách phiếu đã lập</string>
    <string name="xe">Xe</string>
    <string name="chon_thong_tin_xe_va_lai_xe"><![CDATA[Chọn thông tin xe & lái xe]]></string>
    <string name="chon_nguoi_lai">Chọn người lái</string>
    <string name="chon_xe_2">Chọn xe</string>
    <string name="please_choose_driver">Vui lòng chọn người lái !</string>
    <string name="warning_choose_driver">Không thể chọn người lái đang trong trạng thái chưa sẵn sàng !</string>
    <string name="thong_tin_xe_va_lai_xe"><![CDATA[Thông tin xe & lái xe]]></string>
    <string name="thoi_gian_da_di_2">Thời gian đã đi</string>
    <string name="launch_activity">Mở App</string>
    <string name="location_unknown">Vị trí không xác định</string>
    <string name="location_updates_label">Cập nhật vị trí</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Cài đặt</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request</string>
    <string name="radar_driver">Chọn lái xe đang gần bãi</string>
    <string name="update_loaction">Cập nhật vị trí:</string>
    <string name="title_open_command">Mở lệnh đặt xe</string>
</resources>