<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:background="@drawable/searchbox_border"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/tv_pos"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@android:color/black"
            tools:text="1. " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_code"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                tools:text="10/LĐX/03/2020" />

            <TextView
                android:id="@+id/tv_name_email"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/darker_gray"
                tools:text="@string/people_create" />

            <TextView
                android:id="@+id/tv_from"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/darker_gray"
                tools:text="@string/pos_from" />

            <TextView
                android:id="@+id/tv_to"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/darker_gray"
                tools:text="@string/pos_to" />

            <TextView
                android:id="@+id/tv_time_start"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/darker_gray"
                tools:text="@string/time" />

            <LinearLayout
                android:id="@+id/layout_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/state"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_state"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/darker_gray"
                    tools:text=" Đang chờ duyệt" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_reason"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/darker_gray"
                android:visibility="visible"
                tools:text="@string/reason" />

            <LinearLayout
                android:id="@+id/layout_nguoi_yeu_cau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/nguoi_yeu_cau"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_nguoi_yeu_cau"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/darker_gray"
                    tools:text=" Nguyễn Văn A" />

            </LinearLayout>

        </LinearLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/tv_name"-->
        <!--            style="@style/TextAppearance.AppCompat.Medium"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:fontFamily="sans-serif"-->
        <!--            android:textColor="@android:color/black"-->
        <!--            tools:text="Ngô Đức Bắc" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tv_from_to"-->
        <!--            style="@style/TextAppearance.AppCompat.Small"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:fontFamily="sans-serif-light"-->
        <!--            android:textColor="@android:color/darker_gray"-->
        <!--            tools:text="bacnd4@viettel.com.vn" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tv_phone"-->
        <!--            style="@style/TextAppearance.AppCompat.Small"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:fontFamily="sans-serif-light"-->
        <!--            android:textColor="@android:color/darker_gray"-->
        <!--            tools:text="0393041451" />-->
    </LinearLayout>
</androidx.cardview.widget.CardView>
